--- a/emacs/config.org
+++ b/emacs/config.org
@@ -1,10 +1,7 @@
 #+title: Simon's GNU Emacs Configuration 
 #+author: Simon Sekavčnik
-
-
 * PACKAGE MANAGEMENT
-
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
 (defvar elpaca-installer-version 0.4)
 (defvar elpaca-directory (expand-file-name "elpaca/" user-emacs-directory))
 (defvar elpaca-builds-directory (expand-file-name "builds/" elpaca-directory))
@@ -45,8 +42,7 @@
 
 * GENERAL BEHAVIOUR
 ** Evil Mode
-  #+begin_src emacs-lisp
-    
+#+begin_src emacs-lisp :results none
     (elpaca elpaca-use-package
       (elpaca-use-package-mode)
       (setq elpaca-use-package-by-default t))
@@ -80,7 +76,7 @@
 #+end_src
 
 ** General
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (require 'ido)
   (ido-mode t)
   (use-package general
@@ -112,7 +108,7 @@
 #+end_src
 
 ** Hydra
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (use-package hydra
     :ensure t)
 #+end_src
@@ -120,14 +116,14 @@
 * APPEARANCE
 ** Theme
 Using the Solaized theme
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (use-package solarized-theme
     :config
     (load-theme 'solarized-dark t)) ; Choose 'solarized-light' for light theme
 #+end_src
 
 ** Disable Menubar, Toolbars and Scrollbars
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (set-frame-font "Fira Code")
   (menu-bar-mode -1)
   (tool-bar-mode -1)
@@ -135,13 +131,13 @@ Using the Solaized theme
 #+end_src
 
 ** Display Line Numbers and Truncate lines
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (global-display-line-numbers-mode 1)
   (global-visual-line-mode t)
 #+end_src
 
 ** Initial Screen
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (setq initial-major-mode 'org-mode)
   (setq inhibit-startup-message t
     initial-scratch-message "* SIMON'S EMACS"
@@ -151,94 +147,107 @@ Using the Solaized theme
 * MODES
 ** Org Mode 
 Org mode configuration
-#+begin_src emacs-lisp
-  ;; Enable automatic line wrapping in org mode
-  (setq org-indent-indentation-per-level 5)
-  (setq org-ellipsis "⤵")
-  (add-hook 'org-mode-hook
-            (lambda ()
-              (setq fill-column 80) ; Set the desired line width
-              (turn-on-auto-fill)))
+#+begin_src emacs-lisp :results none
+    ;; Enable automatic line wrapping in org mode
+    (setq org-indent-indentation-per-level 5)
+    (setq org-ellipsis "⤵")
+    (add-hook 'org-mode-hook
+              (lambda ()
+                (setq fill-column 80) ; Set the desired line width
+                (turn-on-auto-fill)))
 
-  ;; Configure visual line mode for org mode
-  (add-hook 'org-mode-hook 'visual-line-mode)
-  (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode -1)))
-    (add-to-list 'org-structure-template-alist
-                 '("s" "#+NAME: ?\n#+BEGIN_SRC \n\n#+END_SRC"))
-    (setq org-confirm-babel-evaluate nil)
-
-
-    (defun org-icons ()
-      "Beautify org mode keywords."
-      (setq prettify-symbols-alist '(("TODO" . "")
-                                     ("INBOX" . "")
-                                     ("NEXT" . "")
-                                     ("WAITING" . "")        
-                                     ("WAIT" . "")        
-                                     ("NOPE" . "")
-                                     ("DONE" . "")
-                                     ("[#A]" . "")
-                                     ("[#B]" . "")
-                                     ("[#C]" . "")
-                                     ("[ ]" . "")
-                                     ("[X]" . "")
-                                     ("[-]" . "")
-                                     ("#+BEGIN_SRC" . "")
-                                     ("#+END_SRC" . "")
-                                     ("#+begin_src" . "")
-                                     ("#+end_src" . "")
-                                     (":PROPERTIES:" . "")
-                                     ("#+OPTIONS" . "")
-                                     (":END:" . "―")
-                                     ("#+STARTUP:" . "")
-                                     ("#+TITLE: " . "")
-                                     ("#+RESULTS:" . "")
-                                     ("#+DESCRIPTION:" . "")
-                                     ("#+NAME:" . "")
-                                     ("#+ROAM_TAGS:" . "")
-                                     ("#+FILETAGS:" . "")
-                                     ("#+HTML_HEAD:" . "")
-                                     ("#+SUBTITLE:" . "")
-                                     ("#+AUTHOR:" . "")
-                                     (":Effort:" . "")
-                                     ("SCHEDULED:" . "")
-                                     ("DEADLINE:" . "")))
-      (prettify-symbols-mode))
-    (add-hook 'org-mode-hook #'org-icons)
-
-    (use-package org-superstar
-      :config
-      (setq org-superstar-special-todo-items t)
-      (add-hook 'org-mode-hook (lambda ()
-                                 (org-superstar-mode 1))))
-    (defface my-ligature-face
-      '((t (:family "Fira Code" :height 1.0))) ;; Replace "Fira Code" with the name of your desired font
-      "Face for ligature"
-      :group 'org-faces)
-
-    (use-package org-appear
-      :hook (org-mode . org-appear-mode))
-    (setq org-startup-indented t
-          org-pretty-entities t
-          org-hide-emphasis-markers t
-          org-startup-with-inline-images t
-          org-image-actual-width '(300))
-    (setq org-format-latex-options (plist-put org-format-latex-options :scale 2.0))
-    ;; Configure org-mode to open links in the same buffer
-    (setq org-return-follows-link t)
+    ;; Configure visual line mode for org mode
+    (add-hook 'org-mode-hook 'visual-line-mode)
+    (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode -1)))
+      (add-to-list 'org-structure-template-alist
+                   '("s" "#+NAME: ?\n#+BEGIN_SRC \n\n#+END_SRC"))
+      (setq org-confirm-babel-evaluate nil)
 
 
-    (defun my-org-mode-keys ()
-      (when (bound-and-true-p evil-local-mode)
-        (evil-define-key 'normal org-mode-map (kbd "RET") 'org-open-at-point)))
+      (defun org-icons ()
+        "Beautify org mode keywords."
+        (setq prettify-symbols-alist '(("TODO" . "")
+                                       ("INBOX" . "")
+                                       ("NEXT" . "")
+                                       ("WAITING" . "")        
+                                       ("WAIT" . "")        
+                                       ("NOPE" . "")
+                                       ("DONE" . "")
+                                       ("[#A]" . "")
+                                       ("[#B]" . "")
+                                       ("[#C]" . "")
+                                       ("[ ]" . "")
+                                       ("[X]" . "")
+                                       ("[-]" . "")
+                                       ("#+BEGIN_SRC" . "")
+                                       ("#+END_SRC" . "")
+                                       ("#+begin_src" . "")
+                                       ("#+end_src" . "")
+                                       (":PROPERTIES:" . "")
+                                       ("#+OPTIONS" . "")
+                                       (":END:" . "―")
+                                       ("#+STARTUP:" . "")
+                                       ("#+TITLE: " . "")
+                                       ("#+RESULTS:" . "")
+                                       ("#+DESCRIPTION:" . "")
+                                       ("#+NAME:" . "")
+                                       ("#+ROAM_TAGS:" . "")
+                                       ("#+FILETAGS:" . "")
+                                       ("#+HTML_HEAD:" . "")
+                                       ("#+SUBTITLE:" . "")
+                                       ("#+AUTHOR:" . "")
+                                       (":Effort:" . "")
+                                       ("SCHEDULED:" . "")
+                                       ("DEADLINE:" . "")))
+        (prettify-symbols-mode))
+      (add-hook 'org-mode-hook #'org-icons)
 
-    (add-hook 'org-mode-hook 'my-org-mode-keys)
+      (use-package org-superstar
+        :config
+        (setq org-superstar-special-todo-items t)
+        (add-hook 'org-mode-hook (lambda ()
+                                   (org-superstar-mode 1))))
+      (defface my-ligature-face
+        '((t (:family "Fira Code" :height 1.0))) ;; Replace "Fira Code" with the name of your desired font
+        "Face for ligature"
+        :group 'org-faces)
 
-    ;; Configure evil-mode to open links in the same buffer
+      (use-package org-appear
+        :hook (org-mode . org-appear-mode))
+      (setq org-startup-indented t
+            org-pretty-entities t
+            org-hide-emphasis-markers t
+            org-startup-with-inline-images t
+            org-image-actual-width '(300))
+      (setq org-format-latex-options (plist-put org-format-latex-options :scale 2.0))
+      ;; Configure org-mode to open links in the same buffer
+      (setq org-return-follows-link t)
+
+
+      (defun my-org-mode-keys ()
+        (when (bound-and-true-p evil-local-mode)
+          (evil-define-key 'normal org-mode-map (kbd "RET") 'org-open-at-point)))
+
+      (add-hook 'org-mode-hook 'my-org-mode-keys)
+
+      ;; Configure evil-mode to open links in the same buffer
+
+  (setq org-structure-template-alist
+    '(("c" . "comment\n")
+      ("e" . "example\n")
+      ("E" . "export")
+      ("h" . "export html\n")
+      ("l" . "export latex\n")
+      ("q" . "quote\n")
+      ("s" . "src")
+      ("se" . "src emacs-lisp\n")
+      ("v" . "verse\n")))
 
 #+end_src
+
+
 *** Babel
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
   (org-babel-do-load-languages
    'org-babel-load-languages
    '((emacs-lisp . t)
@@ -247,7 +256,7 @@ Org mode configuration
 #+end_src
 
 ** Org Roam
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
     (use-package org-roam
       :ensure t
       :init
@@ -263,11 +272,13 @@ Org mode configuration
           _i_: Insert           _r_: Refile      _L_: Tomorrow
           _f_: Find             _d_: Delete      _Y_: Yesterday
           _l_: Insert Link                     _F_: Find Date
+          _n_: Header Node
           "
         ("g" org-roam-node-find)
         ("i" org-roam-node-insert)
         ("f" org-roam-node-find)
         ("l" org-roam-insert-link)
+        ("n" org-id-get-create)
         ("c" org-roam-capture)
         ("r" org-roam-refile)
         ("d" org-roam-node-delete)
@@ -289,10 +300,27 @@ Org mode configuration
            "* %<%H:%M> %?\n\n"
            :target (file+head "%<%Y-%m-%d>.org" "#+title: %<%Y-%m-%d>\n\n* The One Thing\n** Big Picture\n*** Career\n*** Health\n*** Relationships\n*** Health\n*** Personal Growth\n** Focus\n *For my ——— what is the _ONE_ Thing I can do hit my goals today, such that by\ndoing it everything else will be easier or unnecessary?*\n\n*** Career\n*** Health\n*** Relationships\n*** Health\n*** Personal Growth\n* GTD\n\n* LOG\n\n* Reflect\n\n"))))
 #+end_src
+** Other Org Modes
+*** Org Ref
+
+** Projectile
 
 * PROGRAMING
+** Yasnipet
+#+begin_src emacs-lisp :results none
+    (use-package yasnippet
+      :ensure t
+      :init
+      (setq yas-snippet-dirs '("~/.config/emacs/snippets"))
+      :config
+      (yas-reload-all)
+      (yas-global-mode 1)
+      (add-hook 'org-mode-hook #'yas-minor-mode))
+
+  #+end_src
+
 ** Python
-#+begin_src emacs-lisp
+#+begin_src emacs-lisp :results none
     (use-package python-mode
       :mode ("\\.py\\'" . python-mode)
       :interpreter ("python" . python-mode)
