--- a/emacs/config.org
+++ b/emacs/config.org
@@ -193,106 +193,106 @@ Using the Solaized theme
 ** Org Mode 
 Org mode configuration
 #+begin_src emacs-lisp :results none
-    ;; Enable automatic line wrapping in org mode
-    (setq org-indent-indentation-per-level 5)
-    (setq org-ellipsis "⤵")
-    (add-hook 'org-mode-hook
-              (lambda ()
-                (setq fill-column 80) ; Set the desired line width
-                (turn-on-auto-fill)))
+  ;; Enable automatic line wrapping in org mode
+      (setq org-indent-indentation-per-level 5)
+      (setq org-ellipsis "⤵")
+      (add-hook 'org-mode-hook
+                (lambda ()
+                  (setq fill-column 80) ; Set the desired line width
+                  (turn-on-auto-fill)))
 
-    ;; Configure visual line mode for org mode
-    (add-hook 'org-mode-hook 'visual-line-mode)
-    (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode -1)))
-      (add-to-list 'org-structure-template-alist
-                   '("s" "#+NAME: ?\n#+BEGIN_SRC \n\n#+END_SRC"))
-      (setq org-confirm-babel-evaluate nil)
-
-
-      (defun org-icons ()
-        "Beautify org mode keywords."
-        (setq prettify-symbols-alist '(("TODO" . "")
-                                       ("INBOX" . "")
-                                       ("NEXT" . "")
-                                       ("WAITING" . "")        
-                                       ("WAIT" . "")        
-                                       ("NOPE" . "")
-                                       ("DONE" . "")
-                                       ("[#A]" . "")
-                                       ("[#B]" . "")
-                                       ("[#C]" . "")
-                                       ("[ ]" . "")
-                                       ("[X]" . "")
-                                       ("[-]" . "")
-                                       ("#+BEGIN_SRC" . "")
-                                       ("#+END_SRC" . "")
-                                       ("#+begin_src" . "")
-                                       ("#+end_src" . "")
-                                       (":PROPERTIES:" . "")
-                                       ("#+OPTIONS" . "")
-                                       (":END:" . "―")
-                                       ("#+STARTUP:" . "")
-                                       ("#+TITLE: " . "")
-                                       ("#+RESULTS:" . "")
-                                       ("#+DESCRIPTION:" . "")
-                                       ("#+NAME:" . "")
-                                       ("#+ROAM_TAGS:" . "")
-                                       ("#+FILETAGS:" . "")
-                                       ("#+HTML_HEAD:" . "")
-                                       ("#+SUBTITLE:" . "")
-                                       ("#+AUTHOR:" . "")
-                                       (":Effort:" . "")
-                                       ("SCHEDULED:" . "")
-                                       ("DEADLINE:" . "")))
-        (prettify-symbols-mode))
-      (add-hook 'org-mode-hook #'org-icons)
-
-      (use-package org-superstar
-        :config
-        (setq org-superstar-special-todo-items t)
-        (add-hook 'org-mode-hook (lambda ()
-                                   (org-superstar-mode 1))))
-      (defface my-ligature-face
-        '((t (:family "Fira Code" :height 1.0))) ;; Replace "Fira Code" with the name of your desired font
-        "Face for ligature"
-        :group 'org-faces)
-
-      (use-package org-appear
-        :hook (org-mode . org-appear-mode))
-      (setq org-startup-indented t
-            org-pretty-entities t
-            org-hide-emphasis-markers t
-            org-startup-with-inline-images t
-            org-image-actual-width '(300))
-      (setq org-format-latex-options (plist-put org-format-latex-options :scale 2.0))
-      ;; Configure org-mode to open links in the same buffer
-      (setq org-return-follows-link t)
+      ;; Configure visual line mode for org mode
+      (add-hook 'org-mode-hook 'visual-line-mode)
+      (add-hook 'org-mode-hook (lambda () (display-line-numbers-mode -1)))
+        (add-to-list 'org-structure-template-alist
+                     '("s" "#+NAME: ?\n#+BEGIN_SRC \n\n#+END_SRC"))
+        (setq org-confirm-babel-evaluate nil)
 
 
-      (defun my-org-mode-keys ()
-        (when (bound-and-true-p evil-local-mode)
-          (evil-define-key 'normal org-mode-map (kbd "RET") 'org-open-at-point)))
+        (defun org-icons ()
+          "Beautify org mode keywords."
+          (setq prettify-symbols-alist '(("TODO" . "")
+                                         ("INBOX" . "")
+                                         ("NEXT" . "")
+                                         ("WAITING" . "")        
+                                         ("WAIT" . "")        
+                                         ("NOPE" . "")
+                                         ("DONE" . "")
+                                         ("[#A]" . "")
+                                         ("[#B]" . "")
+                                         ("[#C]" . "")
+                                         ("[ ]" . "")
+                                         ("[X]" . "")
+                                         ("[-]" . "")
+                                         ("#+BEGIN_SRC" . "")
+                                         ("#+END_SRC" . "")
+                                         ("#+begin_src" . "")
+                                         ("#+end_src" . "")
+                                         (":PROPERTIES:" . "")
+                                         ("#+OPTIONS" . "")
+                                         (":END:" . "―")
+                                         ("#+STARTUP:" . "")
+                                         ("#+TITLE: " . "")
+                                         ("#+RESULTS:" . "")
+                                         ("#+DESCRIPTION:" . "")
+                                         ("#+NAME:" . "")
+                                         ("#+ROAM_TAGS:" . "")
+                                         ("#+FILETAGS:" . "")
+                                         ("#+HTML_HEAD:" . "")
+                                         ("#+SUBTITLE:" . "")
+                                         ("#+AUTHOR:" . "")
+                                         (":Effort:" . "")
+                                         ("SCHEDULED:" . "")
+                                         ("DEADLINE:" . "")))
+          (prettify-symbols-mode))
+        (add-hook 'org-mode-hook #'org-icons)
 
-      (add-hook 'org-mode-hook 'my-org-mode-keys)
+        (use-package org-superstar
+          :config
+          (setq org-superstar-special-todo-items t)
+          (add-hook 'org-mode-hook (lambda ()
+                                     (org-superstar-mode 1))))
+        (defface my-ligature-face
+          '((t (:family "Fira Code" :height 1.0))) ;; Replace "Fira Code" with the name of your desired font
+          "Face for ligature"
+          :group 'org-faces)
 
-      ;; Configure evil-mode to open links in the same buffer
+        (use-package org-appear
+          :hook (org-mode . org-appear-mode))
+        (setq org-startup-indented t
+              org-pretty-entities t
+              org-hide-emphasis-markers t
+              org-startup-with-inline-images t
+              org-image-actual-width '(300))
+        (setq org-format-latex-options (plist-put org-format-latex-options :scale 2.0))
+        ;; Configure org-mode to open links in the same buffer
+        (setq org-return-follows-link t)
 
-  (setq org-structure-template-alist
-    '(("c" . "comment\n")
-      ("e" . "example\n")
-      ("E" . "export")
-      ("h" . "export html\n")
-      ("l" . "export latex\n")
-      ("q" . "quote\n")
-      ("s" . "src")
-      ("se" . "src emacs-lisp\n")
-      ("v" . "verse\n")))
-(use-package org-sticky-header
-  :ensure t
-  :hook (org-mode . org-sticky-header-mode)
-  :config
-  (setq org-sticky-header-full-path 'full
-        org-sticky-header-outline-path 'breadcrumb))
+
+        (defun my-org-mode-keys ()
+          (when (bound-and-true-p evil-local-mode)
+            (evil-define-key 'normal org-mode-map (kbd "RET") 'org-open-at-point)))
+
+        (add-hook 'org-mode-hook 'my-org-mode-keys)
+
+        ;; Configure evil-mode to open links in the same buffer
+
+    (setq org-structure-template-alist
+      '(("c" . "comment\n")
+        ("e" . "example\n")
+        ("E" . "export")
+        ("h" . "export html\n")
+        ("l" . "export latex\n")
+        ("q" . "quote\n")
+        ("s" . "src")
+        ("se" . "src emacs-lisp\n")
+        ("v" . "verse\n")))
+  (use-package org-sticky-header
+    :ensure t
+    :hook (org-mode . org-sticky-header-mode)
+    :config
+    (setq org-sticky-header-full-path 'full
+          org-sticky-header-outline-path 'breadcrumb))
 
 
 #+end_src
@@ -304,6 +304,69 @@ Org mode configuration
   (add-hook 'org-mode-hook #'org-pretty-table-mode)
 #+end_src
 
+Org drill
+#+begin_src emacs-lisp :results none
+(use-package org-drill
+  :ensure t
+  :config
+  ;; Enable org-drill when Org mode is loaded
+  (with-eval-after-load 'org
+    (require 'org-drill))
+
+  ;; Customize org-drill settings
+  (setq org-drill-spaced-repetition-algorithm 'sm2
+        org-drill-add-random-noise-to-intervals-p t
+        org-drill-adjust-intervals-for-early-and-late-repetitions-p t
+        org-drill-maximum-items-per-session 30
+        org-drill-learn-fraction 0.25
+        org-drill-allow-visible-cloze-p t)
+
+  ;; Customize org-drill faces (optional)
+  (custom-set-faces
+   '(org-drill-cloze-face ((t (:foreground "red" :weight bold))))
+   '(org-drill-done-cloze-face ((t (:foreground "green" :weight bold))))))
+
+#+end_src
+*** Org-clock
+#+begin_src emacs-lisp :results none
+    (setq org-clock-clocktable-default-properties
+          '(:maxlevel 3
+            :scope file
+            :block today
+            :tstart "<today>"
+            :tend "<tomorrow>"
+            :stepskip0 t
+            :step nil
+            :step-width 1
+            :properties ("CATEGORY")
+            :fileskip0 nil
+            :hidefiles t
+            :emphasize nil
+            :link t
+            :narrow 40
+            :indent nil
+            :formula nil
+            :timestamp nil
+            :formula-formula nil
+            :link-fmt "[[%s][%s]]"
+            :block-fmt ""
+            :properties-fmt ""
+            :tags nil
+            :tags-fmt nil
+            :narrow-fmt ""
+            :clock-summaries nil
+            :fileskip0summary nil
+            :compact nil
+            :compact-fmt ""
+            :sort nil
+            :sort-fmt ""
+            :show-properties nil
+            :level nil
+            :level-fmt ""
+            :scope-agenda-text ""
+            :table-line-above "--"
+            :table-line-below "--"))
+#+end_src
 *** Babel
 #+begin_src emacs-lisp :results none
   (org-babel-do-load-languages
